--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-redux": "^7.1.24",
     "classnames": "^2.3.1",
     "material-ui-search-bar": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-jss": "^10.9.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
