--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-redux": "^7.1.24",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "material-ui-search-bar": "^1.0.0",
     "react": "^17.0.2",
