--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "material-ui-search-bar": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-images-uploading": "^3.1.6",
     "react-jss": "^10.9.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.2.2",
