--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,16 +1,11 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Wishlist",
+  "name": "Baby Wishlist",
   "icons": [
     {
-      "src": "/images/favicon.ico",
+      "src": "/baby.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
-    },
-    {
-      "src": "/images/baby.png",
-      "type": "image/png",
-      "sizes": "192x192"
     },
     {
       "src": "/images/baby.png",
