--- a/package.json
+++ b/package.json
@@ -1,54 +1,33 @@
 {
   "name": "baby-list",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.0",
-    "@reduxjs/toolkit": "^1.8.3",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.2.5",
-    "@types/react": "^18.0.0",
-    "@types/react-redux": "^7.1.24",
-    "axios": "^0.27.2",
-    "classnames": "^2.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-images-uploading": "^3.1.7",
-    "react-jss": "^10.9.0",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
-    "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "typescript": "^4.7.4",
-    "vite": "^5.4.0",
-    "@vitejs/plugin-react": "^4.3.0"
-  },
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
+    "@reduxjs/toolkit": "^2.9.0",
+    "axios": "^1.12.2",
+    "classnames": "^2.5.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-jss": "^10.10.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.9.4"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.1",
+    "@types/react-redux": "^7.1.24",
+    "typescript": "^5.9.3",
+    "vite": "^7.1.9",
+    "@vitejs/plugin-react": "^5.0.4"
   }
 }
