Implemented OIDC to Authentik

--- a/.env.dist
+++ b/.env.dist
@@ -1,2 +1,4 @@
 VITE_BACKEND_BASE_URL=https://wishlist-backend.nseverin.fr
 VITE_BABY_WISHLIST_ID=cf30c26b-f287-4541-9340-58cd672d72b2
+VITE_SSO_AUTHORITY=
+VITE_SSO_CLIENT_ID=
