--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-jss": "^10.10.0",
+    "react-oidc-context": "^3.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4"
   },
@@ -27,9 +28,9 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "@types/react-redux": "^7.1.24",
+    "@vitejs/plugin-react": "^5.0.4",
     "prettier": "^3.6.2",
     "typescript": "^5.9.3",
-    "vite": "^7.1.9",
-    "@vitejs/plugin-react": "^5.0.4"
+    "vite": "^7.1.9"
   }
 }
