--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc --noEmit && vite build",
     "preview": "vite preview",
-    "format": "prettier --write ."
+    "format": "biome check --write ./src"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -25,11 +25,11 @@
     "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.2.6",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "@types/react-redux": "^7.1.24",
     "@vitejs/plugin-react": "^5.0.4",
-    "prettier": "^3.6.2",
     "typescript": "^5.9.3",
     "vite": "^7.1.9"
   }
